--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "cookies-next": "^2.1.1",
     "cors": "^2.8.5",
     "daisyui": "^2.50.1",
@@ -17,7 +18,8 @@
     "next": "13.1.6",
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
